# shadowmod

./: .gitignore  .replit  CONVERSION_COMPLETE.md  FIXES_APPLIED.md  Procfile.example  README.md  TROUBLESHOOTING.md  audit_help.py  bot_launcher.py  bot_stats.json  cleanup_ctx.py  config.py  convert_commands.py  database.py  fix_indentation.py  hungarian_automod.py  main.py  monitor.py  pyproject.toml  replit.md  requirements.txt  run.py  run_bot.py  run_web.py  start.sh  theme_colors.txt  translations.py  web_server.py
.local/state/replit/agent/filesystem/: filesystem_state.json
cogs/: achievements.py  admin.py  advancedeconomy.py  advancedlogging.py  afk.py  aichat.py  aimoderation.py  antialt.py  antiraid.py  appealssystem.py  automod.py  birthdays.py  botstatus.py  commandstats.py  community.py  confessions.py  connectfour.py  counting.py  customcommands.py  economy.py  embedbuilder.py  events.py  fun.py  games.py  giveaways.py  growthtracking.py  hungariandefense.py  info.py  interactivehelp.py  language.py  leveling.py  logging.py  memeeconomy.py  minigames.py  moderation.py  modmail.py  music.py  nameauto.py  playlists.py  polls.py  (+21 more)
static/css/: dashboard.css  modern_dashboard.css  style.css
static/js/: script.js
templates/: dashboard.html  help.html  index.html  index_public.html  oauth_error.html  server_settings.html  why_us.html
